# rust-toy-nn

./: Cargo.toml  LICENSE  readme.md
src/: main.rs
src/matrix/: mod.rs
src/neural_network/: mod.rs
