[package]
name = "toy-nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
once_cell = "1.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
cargo-watch = "8.4.0"
